# Fiducial-Markers-Analysis

./: README.md
calibration/calibfiles/: D41517082021_192037.npz  calibMat.npy  cameraCalibMat  d415.mat  d415_170921.npz  d415_200921.mat  d415_200921_matlab.npz  d415_200921_struct.mat  d415_struct.mat  d435i_200921.mat  d435i_200921_matlab.npz  d435i_200921_struct.mat  realsense_d415_010721.npz  realsense_d415_010721_2.npz  realsense_d435.npz
libraries/topodetector/: README.md  topotag_detection_params.yml
src/: ARdraw.py  ar_allTags.py  calibration.py  detector.c  detector.cpp  detector.py  detectorProgram  detectors.py  main.py  test.py  utils.py  versionfinder.cpp
src/OpenCVversionCheck/: CMakeLists.txt  python-version.py  versionfinder.cpp
testresults/: .~lock.test_results.csv#  test1.csv  test2.csv  test3.csv  test_1.csv  test_results.csv
